--- a/components/homepage/hero.module.css
+++ b/components/homepage/hero.module.css
@@ -3,12 +3,12 @@
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  height: calc(100vh - 70px);
+  height: 111vh;
   background: #000;
   /* background: url("../assets/img/hero-bg.jpg") center center; */
   background-size: cover;
   position: relative;
-  margin-top: 70px;
+  /* margin-top: 70px; */
   padding: 0;
 }
 
